force-app/main/default/objects/DN_Price_Agreement__c/DN_Price_Agreement__c.object-meta.xml
<CustomObject>
    <label>DN-Price Agreement</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DN-Price Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>