force-app/main/default/objects/DN_Price_Agreement__c/fields/DN_Discount__c.field-meta.xml
<CustomField>
    <fullName>DN_Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>