force-app/main/default/objects/DN_Price_Agreement__c/fields/DN_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>DN_Group_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>