force-app/main/default/objects/DN_Price_Agreement__c/fields/DN_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>DN_Group_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>