force-app/main/default/objects/DN_Price_Agreement__c/fields/DN_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DN_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>